Update Java version and options